--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			.main-desc {
 				line-height: 21px;
 				color: hsl(0, 0%, 50%);
+				font-size: 14px;
 			}
 			.main-profile {
 				margin-top: 21px;
